--- a/assets/scoreguesser.css
+++ b/assets/scoreguesser.css
@@ -57,5 +57,6 @@ button {
 .modal-content div {
   background-color: white;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
