--- a/assets/scoreguesser.css
+++ b/assets/scoreguesser.css
@@ -28,6 +28,8 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: black;
+ 
+  
 }
 
 button {
@@ -59,4 +61,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.movie-title{
+  font-size:40px;
 }
